# image_server

./: .gitignore  CMakeLists.txt  README.md  image_server.sln
image_server/x64/Debug/: image_server.exe.recipe
image_server/x64/Debug/image_server.tlog/: Cl.items.tlog  image_server.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
image_server/x64/Release/: image_server.exe.recipe
image_server/x64/Release/image_server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  image_server.lastbuildstate  image_server.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: image_server.cpp  main.cpp
